[package]
name = "tokio-async-hung"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
async-stream = "0.3"
aws-config = "0.56"
tokio = { version = "1.32", features = ["rt-multi-thread", "macros"] }
tokio-stream = "0.1"
prost = "0.12"
tonic = "0.10"
serde = { version = "1.0", features = ["derive"] }
serde_json = { version = "1.0" }
rand = "*"

[build-dependencies]
tonic-build = { version = "0.10", features = ["prost"] }
