[package]
name = "tokio-async-hung"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
async-stream = "0.3"
aws-config = "0.55.1"
tokio = { version = "1.32", features = ["rt-multi-thread", "macros", "process", "signal", "fs", "io-util", "sync", "time", "full"] }
tokio-stream = "0.1"
tonic = {version = "0.9.2", features = ["transport", "tls"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = { version = "1.0" }
rand = "*"
prost = "0.11"

[build-dependencies]
tonic-build = { version = "0.9.2", features = ["prost"] }
